--- a/harithmapos/templates/invoice/item_update.html
+++ b/harithmapos/templates/invoice/item_update.html
@@ -173,7 +173,7 @@
                 <div class="card-body">
                     <form action="{{url_for('invoice_blueprint.item_invoice_head_detail', item_invoice_head_id=item_invoice_head.id)}}" method="POST">
                         {{ item_invoice_head_update_form.hidden_tag() }}
-                        <input type="hidden" id="customerId" name="customer_id" value="{{ item_invoice_head.customer.id }}">
+                        {{ item_invoice_head_update_form.customer_id(class="form-control", id="customerId", value=item_invoice_head.customer.id) }}
 
                         <!-- Customer Row -->
                         <div class="row g-2 mb-3">
@@ -221,11 +221,18 @@
 
                         <!-- Action Buttons -->
                         <div class="row g-1 mb-2">
-                            <div class="col-6">
+                            <div class="col-4">
                                 {{ item_invoice_head_update_form.update_item_invoice(class="btn btn-primary w-100") }}
                             </div>
-                            <div class="col-6">
+                            <div class="col-4">
                                 {{ item_invoice_head_update_form.complete_item_invoice(class="btn btn-success w-100") }}
+                            </div>
+                            <div class="col-4">
+                                <a href="{{ url_for('invoice_blueprint.delete_item_invoice_head', item_invoice_head_id=item_invoice_head.id) }}" 
+                                   class="btn btn-danger w-100" 
+                                   onclick="return confirm('Are you sure you want to delete this invoice? This action cannot be undone.')">
+                                    <i class="bi bi-trash me-1"></i>Delete
+                                </a>
                             </div>
                         </div>
 
