--- a/harithmapos/templates/dashboard/dashboard.html
+++ b/harithmapos/templates/dashboard/dashboard.html
@@ -180,7 +180,7 @@
                                 </div>
                                 <div class="text-center mb-3">
                                     <small class="text-muted">Total</small>
-                                    <h6 class="mb-1 text-success">${{ washbay.active_invoice.total_price }}</h6>
+                                    <h6 class="mb-1 text-success">{{ washbay.active_invoice.total_price }}</h6>
                                 </div>
                             </div>
                         </div>
