Enhance invoice management by adding additional discount field to item invoice details, updating UOM display in dynamic dropdowns, and implementing safe database operations for bulk actions. Refactor invoice detail calculations to ensure accurate pricing and discounts.

--- a/harithmapos/templates/invoice/item_update.html
+++ b/harithmapos/templates/invoice/item_update.html
@@ -37,6 +37,7 @@
                                 <div class="input-group">
                                     <span class="input-group-text">Qty</span>
                                     {{ item_invoice_detail_create_form.quantity(class="form-control", placeholder="1", value="1") }}
+                                    <span class="input-group-text" id="uomDisplay">-</span>
                                 </div>
                             </div>
                             <div class="col-md-2">
