--- a/harithmapos/templates/purchase_order/create.html
+++ b/harithmapos/templates/purchase_order/create.html
@@ -1,29 +1,28 @@
 {% extends 'layout/base.html' %}
+{% block title %} Create Purchase Order {% endblock %}
 {% block body %}
 <div class="container mt-4">
     <div class="row justify-content-center">
         <div class="col-md-6">
-            <div class="card">
-                <header class="card-header">
-                    <h4 class="card-title mt-2">Register Form</h4>
+            <div class="card shadow-sm">
+                <header class="card-header bg-secondary text-white">
+                    <h4 class="card-title mt-2 mb-0"><i class="bi bi-plus-circle me-2"></i>Create Purchase Order</h4>
                 </header>
                 <article class="card-body">
                     <form method="POST" action="">
                         {{ form.hidden_tag() }}
                         <fieldset class="form-group">
-                            <div class="form-group">
-                                {{ form.supplier.label(class="form-label mt-3",for="supplierDataList") }}
-                                {{ form.supplier(class="form-control", list="datalistOptionsSupplier", id="supplierDataList", placeholder="Search Supplier...") }}
-                                <datalist id="datalistOptionsSupplier">
-                                    {% for supplier in suppliers %}
-                                        <option value="{{supplier.id}}">{{supplier.name}}</option>
-                                    {% endfor %}
-                                </datalist>
+                            <div class="form-group mb-3">
+                                {{ form.supplier.label(class="form-control-label", for="supplierDataList") }}
+                                {{ form.supplier(class="form-control", id="supplierSearch", placeholder="Search Supplier...", autocomplete="off") }}
                             </div>
-                            
+                            <div class="form-group mb-3">
+                                {{ form.supplier_invoice_id.label(class="form-control-label") }}
+                                {{ form.supplier_invoice_id(class="form-control") }}
+                            </div>
                         </fieldset>
                         <div class="form-group">
-                            {{ form.submit(class="btn btn-outline-info mt-3") }}
+                            {{ form.submit(class="btn btn-primary mt-3") }}
                         </div>
                     </form>
                 </article>
@@ -31,4 +30,9 @@
         </div>
     </div>
 </div>
+<script>
+    document.addEventListener("DOMContentLoaded", () => {
+        setupDynamicDropdown("supplierSearch", "supplierDropdown", "/app/search/suppliers", "supplierId", true);
+    });
+</script>
 {% endblock body %}
