--- a/harithmapos/templates/index.html
+++ b/harithmapos/templates/index.html
@@ -338,7 +338,7 @@
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <i class="fas fa-car-wash me-2"></i>Harithma Service Station...
+                <i class="fas fa-car-wash me-2"></i>Harithma Service Station
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
